# nvidia_nim

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
src/: __init__.py  agent.py  config.py  ingest.py
src/agents/: __init__.py  coordinator.py  subagents.py
src/tools/: __init__.py  fact_checker.py  retriever.py
